_sass/theme.scss
@import 'ext/fonts';
@import 'ext/normalize';
@import 'begin';
@import 'syntax';

$linkColor: #999;
$mobileW: 768px;
$smallMobileW: 480px;
$bigScreenW: 1600px;
$leftWidth: 220px;
	
$gray: #999;
$lightGray: #eee;
$color_white: #fff;
$color_prime: #26cbd1;
$color_grey_dark: #a2a2a2;


*,*:before,*:after {
	box-sizing: border-box;
}

body {
	font-family: 'Nunito Sans', sans-serif;
	@include fluidType(16px, 19px);
	line-height: 1.55em;
	margin: 0;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

a {
	color: $linkColor;
	text-decoration: none;
	transition: border-bottom 0.4s;
	&:hover {
		border-bottom: 0.5px solid $linkColor;
	}
}


h1, h2, h3 {
	line-height: 1.2em;
}

h1 {
	@include fluidType(36px, 48px);
}

h2 {
	font-weight: bold;
	@include fluidType(28px, 32px);
}

h4 {
	font-weight: normal;
	@include fluidType(18px, 20px);
}

figcaption {
	font-size: 10pt;
	line-height: 1.5em;
	margin-top: -1em;
}

header {
	// background-size: cover;
	padding: 120px 0;
	color: #fff;
	overflow: hidden;
	h2 {
		font-weight: normal;
		margin-top: 5px;
	}
	h1 {
		margin: 0;
	}

	.social {
		overflow: hidden;
		list-style-type: none;
		padding: 0;
		margin-top: 0;
		li {
			color: #fff;
			float: left;
			i {
				&:first-child::before {
					margin-left: 0;
				}
				@include fluidType(26px, 34px);
				transition: color .3s;
				&:hover {
					color: $gray;
				}
			}
		}
	}
}

.clearfix {
	clear: both;
}

//
// Basic Container Class
//
.container {
	margin:0 150px;
	max-width: 720px;

	div.highlighter-rouge {
		right: 150px;
	}

	@media screen and  (max-width: $mobileWidth) {
		margin:0 15px; 
		div.highlighter-rouge {
			right: 15px;
		}
		div.highlight {
			padding: 30px 15px;
		}
	}

	@media screen and (max-width: $tabWidth) and (min-width: $mobileWidth){
		margin:0 40px;	
		div.highlighter-rouge {
			right: 40px;
		}
		div.highlight {
			padding: 30px;
		}
	}

	@media screen and (max-width: $desktopWidth) and (min-width: $tabWidth){
		margin:0 80px;
		div.highlighter-rouge {
			right: 80px;
		}
		div.highlight {
			padding: 30px 80px;
		}
	}

	@media screen and (min-width: $desktopWidth) and (max-width: 1280px) {
		margin:0 100px;
		div.highlighter-rouge {
			right: 100px;
		}
		div.highlight {
			padding: 30px 100px;
		}
	}
}

.post-title {
	color: #222;
	transition: color .3s ease;
	margin: .1em 0;
	&:hover {
		color: $gray;
		border-bottom: 0;
	}
}

.post-description {
	font-weight: normal;
	color: #ddd;

	margin-top:.5em;
	margin-bottom: 1.3em;
}

.post-date {
	color: $gray;
	.icon-calendar {
		margin-right: 6px;
	}
}

.post-tags {
	list-style-type: none;
	padding: 0;
	li {
		float: left;
		padding: 10px 20px;
		background-color: $lightGray;
		color: #000;
		margin: 5px;
		border-radius: 2px;
		@include fluidType(15px, 17px);
		&:first-child {
			margin-left: 0;
		}
	}
}

.posts {
	list-style-type: none;
	padding: 0;
	>li {
		margin-bottom: 30px;
		padding-bottom: 20px;
		&:not(:last-child) {
			border-bottom: 1px solid $lightGray;
		}
	}
}

.posts, .post-container {
	margin-top: 40px;
}

.post-meta {
	display: flex;
	justify-content: space-between;
	align-items: center;
	a:hover {
		border-bottom: none;
	}
}

.post-container {
	img {
		margin: 20px 0;
	}
}

.navbar {
	position: absolute;
	top: 0;
	right: 5vw;
	a {
		color: inherit;
	}
	ul {
		list-style-type: none;
		li {
			// background-color: #ff9f1c;
			border-radius: 10px;
			margin: 3px;
			border: 1px solid #fff;
			float: left;
			// margin: 5px;
			&:not(:first-child){
				border-left: 0;
			}
			padding: 10px 25px;
			// border-radius: 4px;
			@include fluidType(15px, 17px);
			transition: background-color .3s ease-in;
			&:hover {
				background-color: rgba(#fff, 0.15);
				cursor: pointer;
			}
		}
	}
}

@import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');

:root {
  --color: #000;
  --transition-time: 0.4s;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  min-height: 100vh;
  font-family: 'Open Sans';
  background: #fafafa;
}

a {
  color: inherit;
}

.cards-wrapper {
  display: grid;
  justify-content: center;
  align-items: center;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 4rem;
  padding: 4rem;
  margin: 0 auto;
}

.card {
  font-family: 'Heebo';
  --bg-filter-opacity: 0.5;
  background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img);
  height: 20em;
  width: 15em;
  font-size: 1.5em;
  color: white;
  border-radius: 1em;
  padding: 1em;
  /*margin: 2em;*/
  display: flex;
  align-items: flex-end;
  background-size: cover;
  background-position: center;
  box-shadow: 0 0 5em -1em black;
  transition: all, var(--transition-time);
  position: relative;
  overflow: hidden;
  border: 10px solid #ccc;
  text-decoration: none;
}

.card:hover {
  transform: rotate(0);
}

.card h1 {
  margin: 0;
  font-size: 1.5em;
  line-height: 1.2em;
}

.card p {
  font-size: 0.75em;
  font-family: 'Open Sans';
  margin-top: 0.5em;
  line-height: 2em;
}

.card .tags {
  display: flex;
}

.card .tags .tag {
  font-size: 0.75em;
  background: rgba(255,255,255,0.5);
  border-radius: 0.3rem;
  padding: 0 0.5em;
  margin-right: 0.5em;
  line-height: 1.5em;
  transition: all, var(--transition-time);
}

.card:hover .tags .tag {
  background: var(--color);
  color: white;
}

.card .date {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 0.75em;
  padding: 1em;
  line-height: 1em;
  opacity: .8;
}

.card:before, .card:after {
  content: '';
  transform: scale(0);
  transform-origin: top left;
  border-radius: 50%;
  position: absolute;
  left: -50%;
  top: -50%;
  z-index: -5;
  transition: all, var(--transition-time);
  transition-timing-function: ease-in-out;
}

.card:before {
  background: #ddd;
  width: 250%;
  height: 250%;
}

.card:after {
  background: white;
  width: 200%;
  height: 200%;
}

.card:hover {
  color: var(--color);
}

.card:hover:before, .card:hover:after {
  transform: scale(1);
}

.card-grid-space .num {
  font-size: 3em;
  margin-bottom: 1.2rem;
  margin-left: 1rem;
}

.info {
  font-size: 1.2em;
  display: flex;
  padding: 1em 3em;
  height: 3em;
}

.info img {
  height: 3em;
  margin-right: 0.5em;
}

.info h1 {
  font-size: 1em;
  font-weight: normal;
}

/* MEDIA QUERIES */
@media screen and (max-width: 1285px) {
  .cards-wrapper {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (max-width: 900px) {
  .cards-wrapper {
    grid-template-columns: 1fr;
  }
  .info {
    justify-content: center;
  }
  .card-grid-space .num {
    margin-left: 0;
    text-align: center;
  }
}

@media screen and (max-width: 500px) {
  .cards-wrapper {
    padding: 4rem 2rem;
  }
  .card {
    max-width: calc(100vw - 4rem);
  }
}

@media screen and (max-width: 450px) {
  .info {
    display: block;
    text-align: center;
  }
  .info h1 {
    margin: 0;
  }
}

